--- a/.ebextensions/app.config
+++ b/.ebextensions/app.config
@@ -1,9 +1,9 @@
 option_settings:
   aws:elasticbeanstalk:application:environment:
     PARSE_MOUNT: "/parse"
-    APP_ID: "ReplaceWithAppID"
-    MASTER_KEY: "ReplaceWithMasterKey"
-    DATABASE_URI: "ReplaceWithDatabaseURI"
+    APP_ID: "6%_Q043el{#u~(9zrf$U"
+    MASTER_KEY: "7]R]X_u4)5N=L{9jbE/F"
+    DATABASE_URI: "mongodb://heroku_7pswj97t:ike0333u29qo7ltcg7sr8ov8j1@ds163672.mlab.com:63672/heroku_7pswj97t"
     NODE_ENV: "production"
     SERVER_URL: "http://myappname.elasticbeanstalk.com/parse"
   aws:elasticbeanstalk:container:nodejs:
